forth/test/fail/test_throw_requires_err.af
\ Must fail to compile: error output declaration is required.
fun: test_throw_requires_err_fail { -- not_err }
  " test_err" .throw
end
